// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Copy/cut/paste of whole blocks can copy group onto non textual element (image, spacer) 1`] = `""`;

exports[`Copy/cut/paste of whole blocks can copy group onto non textual element (image, spacer) 2`] = `
"<!-- wp:paragraph -->
<p></p>
<!-- /wp:paragraph -->

<!-- wp:group -->
<div class=\\"wp-block-group\\"><!-- wp:paragraph -->
<p>P</p>
<!-- /wp:paragraph --></div>
<!-- /wp:group -->"
`;

exports[`Copy/cut/paste of whole blocks should copy and paste individual blocks 1`] = `
"<!-- wp:paragraph -->
<p>Here is a unique string so we can test copying.</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>2</p>
<!-- /wp:paragraph -->"
`;

exports[`Copy/cut/paste of whole blocks should copy and paste individual blocks 2`] = `
"<!-- wp:paragraph -->
<p>Here is a unique string so we can test copying.</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>2</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>Here is a unique string so we can test copying.</p>
<!-- /wp:paragraph -->"
`;

exports[`Copy/cut/paste of whole blocks should copy blocks when non textual elements are focused  (image, spacer) 1`] = `
"<!-- wp:spacer -->
<div style=\\"height:100px\\" aria-hidden=\\"true\\" class=\\"wp-block-spacer\\"></div>
<!-- /wp:spacer -->"
`;

exports[`Copy/cut/paste of whole blocks should copy blocks when non textual elements are focused  (image, spacer) 2`] = `
"<!-- wp:spacer -->
<div style=\\"height:100px\\" aria-hidden=\\"true\\" class=\\"wp-block-spacer\\"></div>
<!-- /wp:spacer -->

<!-- wp:spacer -->
<div style=\\"height:100px\\" aria-hidden=\\"true\\" class=\\"wp-block-spacer\\"></div>
<!-- /wp:spacer -->"
`;

exports[`Copy/cut/paste of whole blocks should cut and paste individual blocks 1`] = `
"<!-- wp:paragraph -->
<p>2</p>
<!-- /wp:paragraph -->"
`;

exports[`Copy/cut/paste of whole blocks should cut and paste individual blocks 2`] = `
"<!-- wp:paragraph -->
<p>2</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>Yet another unique string.</p>
<!-- /wp:paragraph -->"
`;

exports[`Copy/cut/paste of whole blocks should handle paste events once 1`] = `""`;

exports[`Copy/cut/paste of whole blocks should handle paste events once 2`] = `
"<!-- wp:paragraph -->
<p></p>
<!-- /wp:paragraph -->

<!-- wp:group -->
<div class=\\"wp-block-group\\"><!-- wp:paragraph -->
<p>P</p>
<!-- /wp:paragraph --></div>
<!-- /wp:group -->"
`;

exports[`Copy/cut/paste of whole blocks should respect inline copy in places like input fields and textareas 1`] = `
"<!-- wp:shortcode -->
[my-shortcode]
<!-- /wp:shortcode -->"
`;

exports[`Copy/cut/paste of whole blocks should respect inline copy in places like input fields and textareas 2`] = `
"<!-- wp:shortcode -->
[my-shortcode]
<!-- /wp:shortcode -->

<!-- wp:paragraph -->
<p>Pasted: e]</p>
<!-- /wp:paragraph -->"
`;

exports[`Copy/cut/paste of whole blocks should respect inline copy when text is selected 1`] = `
"<!-- wp:paragraph -->
<p>First block</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>Second block</p>
<!-- /wp:paragraph -->"
`;

exports[`Copy/cut/paste of whole blocks should respect inline copy when text is selected 2`] = `
"<!-- wp:paragraph -->
<p>First block</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>ck</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>Second block</p>
<!-- /wp:paragraph -->"
`;
